--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Maa Sai Classes — Home</title>
-  <link rel="stylesheet" href="style.css">
+ <link rel="stylesheet" href="style.css">
+<script src="script.js" defer></script>
   <meta name="description" content="Maa Sai Classes — Expert GSEB tuition focusing on Science, Maths, English & S.S. Located in Udhna, Surat.">
 </head>
 <body>
